Bug 743593: Properly cast gfxFont based on type. r=jfkthame