gfx/thebes/gfxOS2Fonts.h
@@ -79,6 +79,8 @@ public:
 protected:
     virtual bool SetupCairoFont(gfxContext *aContext);
 
+    virtual FontType GetType() const { return FONT_TYPE_OS2; }
+
 private:
     cairo_font_face_t *mFontFace;
     Metrics *mMetrics;
